Fix alignment of cross in footer

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ button::-moz-focus-inner
 #cross
 {
 	height: 14px;
-	vertical-align: middle;
+	vertical-align: baseline;
 }
 
 .header
